Clear media query rulesets on page zoom changes.

Otherwise, resolution media queries won't update properly when page
zoom changes. Changing the deviceScaleFactor already did this. Also,
matchMedia listeners already worked.

BUG=617095

Review-Url: https://codereview.chromium.org/2038793002
Cr-Commit-Position: refs/heads/master@{#397697}

Former-commit-id: 82a43d5e94ad2b873fa14f11a4c5f34c98863069